src/test/ui/associated-types/cache/project-fn-ret-invariant.transmute.stderr
error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/project-fn-ret-invariant.rs:48:8
   |
LL |    bar(foo, x)
   |        ^^^
   |
note: first, the lifetime cannot outlive the lifetime `'a` as defined on the function body at 44:8...
  --> $DIR/project-fn-ret-invariant.rs:44:8
   |
LL | fn baz<'a,'b>(x: Type<'a>) -> Type<'static> {
   |        ^^
note: ...so that the expression is assignable
  --> $DIR/project-fn-ret-invariant.rs:48:13
   |
LL |    bar(foo, x)
   |             ^
   = note: expected  `Type<'_>`
              found  `Type<'a>`
   = note: but, the lifetime must be valid for the static lifetime...
note: ...so that the expression is assignable
  --> $DIR/project-fn-ret-invariant.rs:48:4
   |
LL |    bar(foo, x)
   |    ^^^^^^^^^^^
   = note: expected  `Type<'static>`
              found  `Type<'_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
